--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@aws-sdk/client-s3": "^3.596.0",
+    "mime": "^4.0.3",
+    "recursive-readdir": "^2.2.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
