--- a/action.yml
+++ b/action.yml
@@ -1,24 +1,46 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-
-# Add your action's branding here. This will appear on the GitHub Marketplace.
+name: 'S3 Upload Cross-Platform'
+description:
+  'A cross-platform (Node.js-based) Github Action to upload files and/or
+  directories to S3-compatible storage providers.'
+author: 'Wiktor Plaga'
 branding:
-  icon: 'heart'
-  color: 'red'
-
-# Define your inputs here.
+  icon: 'upload'
+  color: 'gray-dark'
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  source:
+    description:
+      'File system path to a source file or directory. Do not use backslash "/"
+      at the end.'
     required: true
-    default: '1000'
-
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
-
+  destination:
+    description:
+      'S3 file or directory name. Do not use backslash "/" at the end.'
+    required: true
+  acl:
+    description:
+      'S3 access control lists (ACL). See:
+      https://docs.aws.amazon.com/AmazonS3/latest/userguide/acl-overview.html#canned-acl'
+    required: true
+    default: 'private'
+  access_key_id:
+    description: 'S3 Access Key ID'
+    required: true
+  secret_access_key:
+    description: 'S3 Secret Access Key'
+    required: true
+  region:
+    description: 'S3 Region'
+    required: true
+    default: 'us-east-1'
+  bucket:
+    description: 'S3 Bucket Name'
+    required: true
+  endpoint:
+    description: 'S3 Endpoint URL'
+    required: false
+# outputs:
+#   time:
+#     description: "Your output description here"
 runs:
-  using: node20
-  main: dist/index.js
+  using: 'node20'
+  main: 'dist/index.js'
