--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,25 +40,50 @@ jobs:
         id: npm-lint
         run: npm run lint
 
-      - name: Test
-        id: npm-ci-test
-        run: npm run ci-test
+      # - name: Test
+      #   id: npm-ci-test
+      #   run: npm run ci-test
 
   test-action:
     name: GitHub Actions Test
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Test Local Action
-        id: test-action
+      - name: Test Action Single File Upload
+        id: test-action-single-file
         uses: ./
         with:
-          milliseconds: 2000
+          source: __tests__/data/file.txt
+          destination: 'file-renamed.txt'
+          region: ${{ vars.S3_REGION }}
+          bucket: ${{ vars.BUCKET_RELEASE }}
+          endpoint: ${{ vars.S3_ENDPOINT }}
+          access_key_id: ${{ secrets.S3_ACCESS_KEY_ID }}
+          secret_access_key: ${{ secrets.S3_SECRET_ACCESS_KEY }}
+          # acl: "public-read"
+          # cache_control: "public-read"
 
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+      # - name: Print Single File Upload Output
+      #   id: output-single-file
+      #   run: echo "${{ steps.test-action-single-file.outputs.key }}"
+
+      - name: Test Action Directory Upload
+        id: test-action-directory-upload
+        uses: ./
+        with:
+          source: __tests__/data
+          destination: 'root/data'
+          region: ${{ vars.S3_REGION }}
+          bucket: ${{ vars.BUCKET_RELEASE }}
+          endpoint: ${{ vars.S3_ENDPOINT }}
+          access_key_id: ${{ secrets.S3_ACCESS_KEY_ID }}
+          secret_access_key: ${{ secrets.S3_SECRET_ACCESS_KEY }}
+          # acl: "public-read"
+          # cache_control: "public-read"
+
+      # - name: Print Directory Upload Output
+      #   id: output-directory
+      #   run: echo "${{ steps.test-action-directory.outputs.key }}"
